[package]
name = "cec_linux"
version = "0.1.1"
authors = ["User65k <15049544+User65k@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
description = "A pure rust library to use the HDMI-CEC linux API"

repository = "https://github.com/User65k/cec_linux"
readme = "README.md"
keywords = ["cec", "hdmi"]

[dependencies]
nix = {version="0.27", features=["ioctl"]}
bitflags = "2.4.1"
num_enum = "0.7"

tokio = {version = "1.34", optional=true}

[features]
tokio = ["tokio/net"]
poll = ["nix/poll"]

[[example]]
name = "switch_power"
path = "examples/switch_power.rs"

[[example]]
name = "monitor"
path = "examples/monitor.rs"
required-features = ["poll"]

[[example]]
name = "pass"
path = "examples/pass.rs"

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]
